// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.securecomputation.controlplane.v1alpha.testing;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

option java_package = "org.wfanet.measurement.securecomputation.controlplane.v1alpha.testing";
option java_multiple_files = true;
option java_outer_classname = "TestWorkProto";

// Resource representing a test work.
message TestWork {
  option (google.api.resource) = {
    type: "control-plane.secure-computation.halo-cmm.org/TestWork"
    pattern: "testWorks/{test_work}"
    singular: "testWork"
    plural: "testWorks"
  };

  // Resource name.
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  // User Name used for testing.
  string user_name = 2 [(google.api.field_behavior) = REQUIRED];
  // User Age used for testing.
  string user_age = 3 [(google.api.field_behavior) = REQUIRED];
  // User Country used for testing.
  string user_country = 4 [(google.api.field_behavior) = REQUIRED];
}
